--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -452,6 +452,7 @@ CONFIG_MMI_SOC_INFO=y
 CONFIG_HAS_MACH_MEMUTILS=y
 CONFIG_BRICKED_HOTPLUG=y
 CONFIG_INTELLI_HOTPLUG=y
+CONFIG_MSM_SLEEPER=y
 # CONFIG_PLAT_SPEAR is not set
 
 #
