--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -447,6 +447,7 @@ CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_MMI_UNIT_INFO=y
 CONFIG_MMI_SOC_INFO=y
 CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_INTELLI_HOTPLUG=y
 # CONFIG_PLAT_SPEAR is not set
 
 #
@@ -502,7 +503,6 @@ CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_ARM_ERRATA_798181 is not set
 # CONFIG_PERFMAP is not set
 # CONFIG_FIQ_DEBUGGER is not set
-CONFIG_INTELLI_PLUG=y
 
 #
 # Bus support
