--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -258,6 +258,7 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 # CONFIG_CGROUP_BFQIO is not set
@@ -269,6 +270,7 @@ CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_FIOPS=y
 # CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="fiops"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -447,7 +449,6 @@ CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_MMI_UNIT_INFO=y
 CONFIG_MMI_SOC_INFO=y
 CONFIG_HAS_MACH_MEMUTILS=y
-# CONFIG_MSM_HOTPLUG is not set
 CONFIG_BRICKED_HOTPLUG=y
 CONFIG_INTELLI_HOTPLUG=y
 # CONFIG_PLAT_SPEAR is not set
